--- a/package.json
+++ b/package.json
@@ -13,7 +13,12 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "aylien_textapi": "^0.7.0",
+    "css-loader": "^3.5.2",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "sass-loader": "^8.0.2",
+    "style-loader": "^1.1.4",
     "webpack": "^4.35.3",
     "webpack-cli": "^3.3.5"
   },
@@ -23,6 +28,7 @@
     "babel-loader": "^8.0.6",
     "clean-webpack-plugin": "^3.0.0",
     "html-webpack-plugin": "^3.2.0",
+    "node-sass": "^4.14.0",
     "webpack-dev-server": "^3.7.2"
   }
 }
