--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "css-loader": "^3.5.2",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "mini-css-extract-plugin": "^0.9.0",
+    "optimize-css-assets-webpack-plugin": "^5.0.3",
     "sass-loader": "^8.0.2",
     "style-loader": "^1.1.4",
-    "webpack": "^4.35.3",
-    "webpack-cli": "^3.3.5",
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.11",
     "webpack-merge": "^4.2.2"
   },
   "devDependencies": {
