--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "clean-webpack-plugin": "^3.0.0",
     "html-webpack-plugin": "^3.2.0",
     "node-sass": "^4.14.0",
-    "webpack-dev-server": "^3.7.2"
+    "webpack-dev-server": "^3.7.2",
+    "workbox-webpack-plugin": "^5.1.2"
   }
 }
