--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "babel-loader": "^8.0.6",
     "clean-webpack-plugin": "^3.0.0",
     "html-webpack-plugin": "^3.2.0",
+    "jest": "^25.4.0",
     "node-sass": "^4.14.0",
     "webpack-dev-server": "^3.7.2",
     "workbox-webpack-plugin": "^5.1.2"
