--- a/package.json
+++ b/package.json
@@ -1,39 +1,39 @@
 {
-  "name": "example-project",
-  "version": "1.0.0",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node src/server/index.js",
-    "build-prod": "webpack --config webpack.prod.js",
-    "build-dev": "webpack-dev-server  --config webpack.dev.js --open"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
-  "dependencies": {
-    "aylien_textapi": "^0.7.0",
-    "css-loader": "^3.5.2",
-    "dotenv": "^8.2.0",
-    "express": "^4.17.1",
-    "mini-css-extract-plugin": "^0.9.0",
-    "optimize-css-assets-webpack-plugin": "^5.0.3",
-    "sass-loader": "^8.0.2",
-    "style-loader": "^1.1.4",
-    "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.11",
-    "webpack-merge": "^4.2.2"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.5.4",
-    "@babel/preset-env": "^7.5.4",
-    "babel-loader": "^8.0.6",
-    "clean-webpack-plugin": "^3.0.0",
-    "html-webpack-plugin": "^3.2.0",
-    "jest": "^25.4.0",
-    "node-sass": "^4.14.0",
-    "webpack-dev-server": "^3.7.2",
-    "workbox-webpack-plugin": "^5.1.2"
-  }
+    "name": "example-project",
+    "version": "1.0.0",
+    "main": "index.js",
+    "scripts": {
+        "test": "jest",
+        "start": "node src/server/index.js",
+        "build-prod": "webpack --config webpack.prod.js",
+        "build-dev": "webpack-dev-server  --config webpack.dev.js --open"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "description": "",
+    "dependencies": {
+        "aylien_textapi": "^0.7.0",
+        "css-loader": "^3.5.2",
+        "dotenv": "^8.2.0",
+        "express": "^4.17.1",
+        "mini-css-extract-plugin": "^0.9.0",
+        "optimize-css-assets-webpack-plugin": "^5.0.3",
+        "sass-loader": "^8.0.2",
+        "style-loader": "^1.1.4",
+        "webpack": "^4.43.0",
+        "webpack-cli": "^3.3.11",
+        "webpack-merge": "^4.2.2"
+    },
+    "devDependencies": {
+        "@babel/core": "^7.5.4",
+        "@babel/preset-env": "^7.5.4",
+        "babel-loader": "^8.0.6",
+        "clean-webpack-plugin": "^3.0.0",
+        "html-webpack-plugin": "^3.2.0",
+        "jest": "^25.4.0",
+        "node-sass": "^4.14.0",
+        "webpack-dev-server": "^3.7.2",
+        "workbox-webpack-plugin": "^5.1.2"
+    }
 }
