--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "description": "",
     "dependencies": {
         "aylien_textapi": "^0.7.0",
+        "body-parser": "^1.19.0",
+        "cors": "^2.8.5",
         "css-loader": "^3.5.2",
         "dotenv": "^8.2.0",
         "express": "^4.17.1",
