--- a/package.json
+++ b/package.json
@@ -31,9 +31,12 @@
         "@babel/core": "^7.5.4",
         "@babel/preset-env": "^7.5.4",
         "babel-loader": "^8.0.6",
+        "babel-polyfill": "^6.26.0",
         "clean-webpack-plugin": "^3.0.0",
         "html-webpack-plugin": "^3.2.0",
         "jest": "^25.4.0",
+        "core-js": "^3.6.5",
+        "regenerator-runtime": "^0.13.5",
         "node-sass": "^4.14.0",
         "webpack-dev-server": "^3.7.2",
         "workbox-webpack-plugin": "^5.1.2"
